--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,16 @@ html, body{
 height 100%;
 }
 
+
+/* LOGO */
+
+.logo img{
+float: left;
+margin-left: 70px;
+width: 190px;
+}
+
+
 /* MAIN MENU */
 
 .header{
@@ -57,6 +67,10 @@ height 100%;
   min-height: calc(100vh - 1px);
 }
 
+.empty_block{
+height: 80px
+}
+
 
 /* CONTENT */
 
@@ -64,6 +78,74 @@ height 100%;
     width:60%;
     margin: 100px auto 0;
     flex: 1 0 auto;
+}
+
+/* MAIN_PAGE */
+
+.info{
+    display: flex;
+    margin: 80px auto 0;
+    width: 80%;
+    box-shadow: -5px 15px 10px skyblue;
+    align-items: center;
+    border-radius: 200px;
+    font-family: monospace;
+}
+
+.description{
+    font-size: 35px;
+    margin: 0 auto;
+    text-align: right;
+}
+
+.names{
+    box-shadow: -5px 15px 10px skyblue;
+    border-radius: 200px;
+    padding: 10px 20px;
+    letter-spacing: 3px;
+}
+
+
+.desc{
+    width:100%;
+    font-width:600px;
+    color: dodgerblue;
+    margin: 0 auto;
+    text-align: center;
+    box-shadow: 0px 0px 0px skyblue;
+    border-radius: 200px;
+}
+
+.desc li{
+    margin-bottom: 10px;
+    font-style: normal;
+    box-shadow: 5px 3px 10px grey;
+    font-size: 25px;
+    padding: 5px;
+    font-family: monospace;
+    border-radius: 200px;
+    letter-spacing: 2px;
+}
+
+
+ul.checkmark li:before {
+    content: '\2713\0020';
+    color: forestgreen;
+}
+
+
+ul a {
+    text-decoration: none;
+    color: mediumaquamarine;
+}
+
+.checkmark li:hover{
+    transition-duration: 0.6s;
+    box-shadow: 0px 12px 10px orange;
+}
+
+.checkmark li{
+    list-style: none;
 }
 
 
