--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,9 @@
 
 {% block menu %}
 <header class="header">
-
+    <div class="logo">
+        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo">
+    </div>
     <ul class="main_menu">
         <li><a href="#"><p>Главная</p></a></li>
         <li><a href="#"><p>Блог</p></a></li>
